# sagepilot_ai_full_stack

./: CUSTOM_VOICE_STACK.md  README.md  SETUP_README.md  architecture_overview.md  docker-compose.yml  pyproject.toml  tradeoffs_and_next_steps.md
backend/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 401d0779d217_create_session_table.py
backend/src/: main.py
backend/src/controller/: session_controller.py
backend/src/core/: config.py  db.py  livekit.py
backend/src/model/: session.py
backend/src/repository/: session_repo.py
backend/src/routes/: session_routes.py
backend/src/schema/: session.py
backend/src/service/: session_service.py
examples/: elevenlabs_example.py
frontend/trial1/: .dockerignore  .env.example  Dockerfile
livekit/: .env.example  Dockerfile  IMPLEMENTATION_SUMMARY.md  livekit.toml  pyproject.toml
livekit/src/: agent.py  custom_voice_example.py
livekit/src/custom_voice/: __init__.py  config.py  context.py  events.py  protocols.py  session.py  session_consumers.py
livekit/tests/custom_voice/: test_livekit_eou.py
src/: agent.py  custom_voice_example.py
src/custom_voice/: README.md  audio_pipeline.py  context.py  events.py  interruption.py  protocols.py  session.py
src/custom_voice/llm/: __init__.py  base.py  openai.py
src/custom_voice/stt/: __init__.py  base.py  deepgram.py
src/custom_voice/tts/: __init__.py  base.py  (+2 more)
tests/custom_voice/: test_consumers.py  test_elevenlabs_tts.py  test_llm_tts_streaming.py
(+49 files in other folders)
